MED-98 + small changes from cr + logic corection in delete method