@@ -11,7 +11,6 @@ import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -20,35 +19,35 @@ public class DoctorController {
     private final DoctorMapper doctorMapper;
 
     @GetMapping("/doctors")
-    public List<DoctorDTO> getDoctors(){
+    public List<DoctorDTO> getDoctors() {
         return doctorService.getDoctors().stream()
                 .map(doctorMapper::doctorToDoctorDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @PostMapping("/doctors")
-    public DoctorEditDTO addDoctor(@Valid @RequestBody DoctorEditDTO doctorEditDTO){
-       return doctorMapper.doctorToDoctorEditDTO(doctorService.addDoctor(doctorEditDTO));
+    public DoctorEditDTO addDoctor(@Valid @RequestBody DoctorEditDTO doctorEditDTO) {
+        return doctorMapper.doctorToDoctorEditDTO(doctorService.addDoctor(doctorEditDTO));
     }
 
     @GetMapping("/doctors/{email}")
-    public DoctorDTO getDoctorByEmail(@PathVariable String email){
+    public DoctorDTO getDoctorByEmail(@PathVariable String email) {
         return doctorMapper.doctorToDoctorDTO(doctorService.getDoctorByEmail(email));
     }
 
     @DeleteMapping("/doctors/{email}")
     @ResponseStatus(HttpStatus.NO_CONTENT)
     public void deleteDoctorByEmail(@PathVariable String email) {
-        boolean deleted = doctorService.deleteDoctorByEmail(email);
+        doctorService.deleteDoctorByEmail(email);
     }
 
     @PutMapping("/doctors/{email}")
-    public DoctorEditDTO updateDoctor(@PathVariable String email, @Valid @RequestBody DoctorEditDTO updatedDoctorEditDTO){
+    public DoctorEditDTO updateDoctor(@PathVariable String email, @Valid @RequestBody DoctorEditDTO updatedDoctorEditDTO) {
         return doctorMapper.doctorToDoctorEditDTO(doctorService.updateDoctor(email, updatedDoctorEditDTO));
     }
 
     @PatchMapping("/doctors/{email}")
-    public DoctorDTO updatePassword(@PathVariable String email, @RequestBody Doctor updatedPassword){
+    public DoctorDTO updatePassword(@PathVariable String email, @RequestBody Doctor updatedPassword) {
         return doctorMapper.doctorToDoctorDTO(doctorService.updatePassword(email, updatedPassword));
     }
 }
